    have the Curios mod installed.
  The Energized Power Core and Nullified Power Core are now crafted using the
    Circuit Fabricator from ADDSynth Energy.
  Changed Energy Storage Container's default maximum energy from 1,000,000 to 200,000.
    - This is mainly because I plan to add different types of batteries in the future.
  Some Machine State status messages are now color-coded.
FIXED:
  Fixed Unidentified Chainmail armor dropping as often as Gold armor.
  Optimized Lasers:
    - Doesn't use any TileEntities at all, so there should be much less lag.
    - Lasers stay in-world if you log out and get back in again.
    - Lasers beams continue moving even if the Laser is removed.
  Fixed Laser machines counting adjacent lasers even though they weren't attached
    or the proper laser type.
  Fixed de_de.json language files. Fixed "Lasers" and "Auto Shutoff" not being translated.
    See: https://github.com/ADDSynth/Overpowered-Forge-1.14/commit/5f4418eadb862447e4b58be2b637d0f230d717f4
  Fixed Energy Suspension Bridge maximum length was actually 1 less than what is set
    in the configuration.
  Fix not loading MachineValues config correctly. Yay! Sorry about that!
REMOVED:
  Before now, you could still edit the config to seperate Tools into their own Creative Tab,
    we've finally removed that.
KNOWN PROBLEMS:
  If you edit the configuration option that changes the Maximum Energy Suspension Bridge
    Length to a lower value, while you have a bridge active in your world, then the
    Energy Suspension Bridge will not recognize it, and won't be able to turn it off.
    The energy bridge will exist as actual indestructable blocks in the world, not controlled
    by the Energy Suspsension Bridge.
    - I will try to fix this as soon as I can!
  Passive Machines (Crystal Matter Generator and Plasma Generator) will continue consuming energy
    even though the output slot is full and can't insert any more items.
DEVELOPER ONLY: